--- a/AMKuperus/flagsV2/style.css
+++ b/AMKuperus/flagsV2/style.css
@@ -12,11 +12,28 @@ body {
   background-color: #9EA6B2;
   margin: 10px;
   border-radius: 8px;
+  width: 15vw;
   text-align: center;
   font-family: sans-serif;
   font-size: 0.8em;
+  z-index: -1;
 }
 
-.hide {
-  display: none;
+.ansbox {
+  margin: 0.5em;
+  padding: 0.5em;
+  border-radius: 8px;
+  box-shadow: 2px 2px 5px;
+  background-color: #D1D1D1;
+  font-family: serif;
+  font-size: 0.9em;
+  text-align: center;
+}
+
+.correct {
+  width: 15vw;
+}
+
+.wrong {
+  width: 15vw;
 }
