--- a/maurice/style2.css
+++ b/maurice/style2.css
@@ -316,6 +316,8 @@ article{
 
 .roll{
 	border: 1px solid black;
+	background-color: green;
+	color: blue;
 }
 
 footer{
@@ -355,5 +357,41 @@ figure{
 }
 
 #highscore{
-	border: 1px solid black;
+	width: 400px;
+	border: 1px solid white;
+	margin: auto;
+	color: white;
+}
+
+#scoretable{
+	padding: 10px;
+	margin: 10px;
+	border: 1px solid white;
+	background-color: green;
+	color: white;
+}
+
+.roll{
+	padding: 10px;
+	margin: 10px;
+	border: 1px solid white;
+	background-color: green;
+	color: white;
+}
+
+#rollbutton{
+	border: 2px solid white;
+	border-radius: 10;
+	padding: 10px 20px;
+	margin: 10px;
+	background-color: red;
+	float: left;
+	color: white;
+	font-size: 16px;
+}
+
+#yahtzee{
+	background-color: green;
+	height: 100%;
+	color: white;
 }
