--- a/frank/tictactoe/style.css
+++ b/frank/tictactoe/style.css
@@ -4,3 +4,10 @@ button {
     height:140px; border:1px solid black; 
     font-size: 100px;
 }
+
+.lol {
+    background-color: white; 
+    width:140px;
+    height:140px; border:1px solid black; 
+    font-size: 100px;
+}
