--- a/guido/activitytracker/stylesheet.css
+++ b/guido/activitytracker/stylesheet.css
@@ -1,7 +1,6 @@
 body {
    font-family:Arial, Helvetica, sans-serif;
    font-size:14px;
-   background-image: url('images/rnm.jpg');
 }
 
 label {
@@ -9,7 +8,11 @@ label {
    width:100px;
    font-size:14px;
 }
+img {
+  position    : absolute;
+  bottom      : 10px;
 
+}
 .box {
    border:#666666 solid 1px;
    background: white;
@@ -26,13 +29,13 @@ label {
 .div1 {
   background-color: #666666;
   border:#666666 solid 1px;
+  color: white;
   padding: 3px;
   font-weight:bold;
   font-size:16px;
   text-align: center;
-  color: white;
   font-family: sans-serif;
-  letter-spacing: 1px;
+  letter-spacing: 3px;
 }
 .div2 {
   margin: 30px;
@@ -40,7 +43,16 @@ label {
 .welcome {
   width: 225px;
   border: solid 3px white;
-  color:white;
   text-align: left;
   text-indent: 2px;
+}
+.tracker {
+  background-color: white;
+  border:#666666 solid 1px;
+  padding: 3px;
+  font-weight:bold;
+  font-size:16px;
+  text-align: center;
+  font-family: sans-serif;
+  letter-spacing: 1px;
 }
