--- a/AMKuperus/SAT/style.css
+++ b/AMKuperus/SAT/style.css
@@ -3,7 +3,7 @@ body {
   background-color: #E0E1E6;
 }
 
-h1, h2 {
+h1, h2, small {
   font-family: sans-serif;
   text-align: center;
   color: rgba(1,167,189,1.00);
@@ -12,6 +12,10 @@ h1, h2 {
 p, a {
   font-family: sans-serif;
   font-size: 0.8em;
+}
+
+small {
+  font-size: 0.6em;
 }
 
 a {
