--- a/guido/tictactoe/stylesheet.css
+++ b/guido/tictactoe/stylesheet.css
@@ -1,4 +1,4 @@
-.span1 {
+.message {
     font-size: 14px;
     color: #808080;
     border-style: groove;
@@ -8,26 +8,6 @@
 }
 h1 {
   color: ;
-}
-button {
-    line-height:50px;
-    font-size:42px;
-    width:50px;
-    height:50px;
-}
-button#reset {
-    width:150px;
-    font-size:20px;
-}
-div#message {
-    height:60px;
-    line-height:60px;
-    width:150px;
-    text-align:center;
-    font-size:20px;
-    font-weight:bold;
-}
-#button1 {
-  width:150px;
-  font-size:20px;
+ {
+
 }
