--- a/guido/activitytracker/stylesheet2.css
+++ b/guido/activitytracker/stylesheet2.css
@@ -56,8 +56,7 @@ img {
   font-family: sans-serif;
   letter-spacing: 1px;
 }
-table {
-  font-family: "Century Gothic", "AppleGothic";
+.tableoutput {
   border: 1px solid black;
 }
 th {
@@ -67,6 +66,11 @@ th {
 td {
   border: 1px solid black;
   padding: 3px;
+  margin: 1px;
   table-layout: inherit;
   text-indent: 2px;
+}
+.trackertable {
+text-align: right;
+border: 1px solid black;
 }
