--- a/guido/tictactoe/stylesheet.css
+++ b/guido/tictactoe/stylesheet.css
@@ -4,8 +4,9 @@
     border-color: inherit;
     padding: 2px;
 }
-h1 {
-  color: ;
- {
-
+.tictactoe {
+    display: block;
+    justify-content: center;
+    align-items: center;
+    align-self: center;
 }
