--- a/Sander/PHP5/Recipes Casus/Versie 01/stylesheet.css
+++ b/Sander/PHP5/Recipes Casus/Versie 01/stylesheet.css
@@ -35,7 +35,7 @@ a:link {
 
 /* Visited */
 a:visited {
-	color: #5C4432;
+	color: #5C4032;
 }
 
 /* Hover */
@@ -45,7 +45,7 @@ a:hover {
 
 /* Selected */
 a:active {
-	color: #5C4432;
+	color: #5C4032;
 }
 
 /* Index */
@@ -71,7 +71,7 @@ a:active {
 	width: 100%;
 	height: 50px;
 	overflow: auto;
-	background-color: #5C4432;
+	background-color: #5C4032;
 	font-size: 20px;
 	color: #EEE;
 }
@@ -82,11 +82,11 @@ a:active {
 }
 
 .headerButton {
-	display: inline;
-	line-height: 47px;
-	padding-top: 3px;
-	text-align: center;
-	border-left: 1px solid #999;
+    display: inline;
+    line-height: 47px;
+    padding-top: 3px;
+    text-align: center;
+    border-left: 1px solid #7D665B;
 }
 
 .headerLogin {
@@ -115,7 +115,7 @@ a:active {
 .menuContainer {
 	display: flex;
 	justify-content: center;
-	font-size: 30px;
+	font-size: 32px;
 }
 
 .menuButton {
@@ -131,7 +131,7 @@ a:active {
 }
 
 .menuButton:hover {
-	border-bottom: 5px solid #5C4432;
+	border-bottom: 5px solid #5C4032;
 	margin-bottom: 0px;
 }
 
@@ -139,8 +139,8 @@ a:active {
 /* Content */
 
 .content {
-	display: flex;
-	#border: 1px solid #CCC;
+    display: flex;
+    #border: 1px solid #CCC;
 }
 
 .column {
@@ -161,9 +161,9 @@ a:active {
 }
 
 .ingredients .header {
-	background: #5C4432;
+	background: #5C4032;
 	padding: 10px;
-	font-size: 25px;
+	font-size: 27px;
 	color: #EEE;
 }
 
@@ -187,9 +187,10 @@ a:active {
 }
 
 h1.center {
-	width: 100%;
-	font-family: fourHand;
-	font-size: 50px;
+    width: 100%;
+    font-family: fourHand;
+    font-size: 50px;
+    color: #5C4032;
 }
 
 .contentImage {
