--- a/Sander/PHP5/Recipes Casus/Versie 02/stylesheet.css
+++ b/Sander/PHP5/Recipes Casus/Versie 02/stylesheet.css
@@ -15,12 +15,16 @@ body {
 	position: fixed;
 	top: 0;
 	width: 80%;
-	min-width: 500px;
+	min-width: 700px;
 	height: 100%;
 	background: #FFF;
 	overflow: auto;
 }
 
+hr {
+	border: 0px;
+	border-bottom: 1px solid #5C4032;
+}
 
 /* Links */
 
@@ -30,7 +34,7 @@ a {
 
 /* Unvisited */
 a:link {
-
+	color: #5C4032;
 }
 
 /* Visited */
@@ -38,9 +42,17 @@ a:visited {
 	color: #5C4032;
 }
 
+a:visited.headerButton {
+	color: #EEE;
+}
+
 /* Hover */
 a:hover {
 	color: #333;
+}
+
+a:hover.headerButton {
+	color: #5C4032;
 }
 
 /* Selected */
@@ -61,6 +73,7 @@ a:active {
 .indexImage {
 	display: flex;
 	justify-content: center;
+	margin-top: 15vh;
 }
 
 
@@ -82,11 +95,17 @@ a:active {
 }
 
 .headerButton {
-    display: inline;
-    line-height: 47px;
-    padding-top: 3px;
-    text-align: center;
-    border-left: 1px solid #7D665B;
+	display: inline;
+	line-height: 47px;
+	padding-top: 3px;
+	text-align: center;
+	border-left: 1px solid #7D665B;
+	color: #EEE;
+}
+
+.headerButton:hover {
+	background: #FFF;
+	color: #5C4032;
 }
 
 .headerLogin {
@@ -96,6 +115,11 @@ a:active {
 .headerOptions {
 	width: 50px;
 	overflow: hidden;
+	background: #5C4032 url("images/optionsWhite.png") no-repeat;
+}
+
+.headerOptions:hover {
+	background: #FFF url("images/optionsBrown.png") no-repeat;
 }
 
 .headerImage {
@@ -107,7 +131,34 @@ a:active {
 
 /* Header clickmenu */
 
+.onclick-menu {
+#    position: relative;
+#    display: inline-block;
+}
 
+.onclick-menu:focus {
+    /* clicking on label should toggle the menu */
+    pointer-events: none;
+}
+
+.onclick-menu:focus .onclick-menu-content {
+    /*  opacity is 1 in opened state (see below) */
+    opacity: 1;
+    visibility: visible;
+
+    /* don't let pointer-events affect descendant elements */
+    pointer-events: auto;
+}
+
+.onclick-menu-content {
+    position: absolute;
+    z-index: 1;
+
+    /* use opacity to fake immediate toggle */
+    opacity: 0;
+    visibility: hidden;
+    transition: visibility 0.5s;
+}
 
 
 /* Menu */
@@ -171,7 +222,7 @@ a:active {
 	border: 1px solid #DDD;
 	border-top: 0;
 	padding: 10px;
-	font-size: 17px;
+	font-size: 16px;
 	color: #222;
 	font-family: Verdana;
 }
@@ -183,13 +234,13 @@ a:active {
 	width: 60%;
 	min-width: 300px;
 	font-family: Verdana;
-	font-size: 17px;
+	font-size: 15px;
 }
 
 h1.center {
     width: 100%;
     font-family: fourHand;
-    font-size: 50px;
+    font-size: 40px;
     color: #5C4032;
 }
 
@@ -198,9 +249,12 @@ h1.center {
 	margin: 0px auto 10px;
 }
 
+
+/* Register */
+
 .registerInput {
 	width: 20vw;
-	margin-left: 10px;
+	margin-left: 15px;
     padding: 8px;
 	font-family: Verdana;
 	font-size: 15px;
@@ -208,10 +262,15 @@ h1.center {
 	border: 1px solid #CCC;
 }
 
+.registerInput:focus {
+	outline: none;
+	box-shadow: 0px 0px 0px 1px #5C4032;
+}
+
 .registerSubmit {
-	margin-left: 10px;
+	margin-left: 15px;
 	padding-top: 5px;
-	width: 94%;
+	width: 20vw;
 	height: 45px;
 	border: 0px;
 	background: #5C4032;
@@ -222,16 +281,8 @@ h1.center {
 }
 
 .registerSubmit:hover {
-	margin-left: 10px;
-	padding-top: 5px;
-	width: 94%;
-	height: 45px;
-	border: 0px;
 	background: #FFF;
-	font-family: fourHand;
-	font-size: 25px;
 	color: #5C4032;
-	outline: none;
 	box-shadow: inset 0px 0px 0px 1px #CCC;
 }
 
